force-app/src/objects/Billing_Contract__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Contracts</relationshipLabel>
        <relationshipName>Billing_Contracts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accounting_Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting Currency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaAccountingCurrency__c.c2g__OwnerCompany__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Billing Contracts</relationshipLabel>
        <relationshipName>Billing_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accreditation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Accreditation</label>
        <referenceTo>Accreditation__c</referenceTo>
        <relationshipLabel>Billing Contracts</relationshipLabel>
        <relationshipName>Billing_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_Accreditation_Cycle__c</fullName>
        <formula>TEXT(Account__r.Annual_Accreditation_Cycle__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Accreditation Cycle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Membership_Cycle__c</fullName>
        <formula>TEXT(Account__r.Invoice_Membership_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Membership Cycle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_period_of_Contract__c</fullName>
        <label>Billing period of Contract</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>One-off</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                    <isActive>false</isActive>
                    <label>Monthly</label>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                    <isActive>false</isActive>
                    <label>Quarterly</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments_Response_to_customer_request__c</fullName>
        <label>Comments (Response to customer request)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Communication_email_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Communicatio email sent a week before the invoice goes out</description>
        <inlineHelpText>Communication email sent a week before the invoice goes out</inlineHelpText>
        <label>Communication email sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Billing Contracts</relationshipLabel>
        <relationshipName>Billing_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Renewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Renewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_total_value__c</fullName>
        <label>Contract total value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNU_Send_Invoice_per_Email__c</fullName>
        <formula>IF(ISPICKVAL( Account__r.Payment_option__c , &quot;Credit Card&quot;), false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DNU Send Invoice per Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>Duration in months</description>
        <inlineHelpText>Duration in months</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date2__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(Start_date__c)), NOT(ISBLANK(Duration__c))), ADDMONTHS(Start_date__c,  Duration__c), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(OLD)End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Head_of_School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Head of School</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Billing Contracts</relationshipLabel>
        <relationshipName>Billing_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Description__c</fullName>
        <formula>IF(

NOT(ISBLANK( Opportunity__c )),  Opportunity__r.Name ,


Description__c &amp; IF( ISPICKVAL( Billing_period_of_Contract__c  ,&quot;Yearly&quot;), &quot; - &quot; &amp; &quot;Start Date &quot; &amp;TEXT(DAY(Start_date__c)) &amp; &quot;-&quot;&amp;  TEXT(MONTH(Start_date__c)) &amp;&quot;-&quot; &amp;  TEXT(YEAR(Start_date__c))  &amp; &quot; - &quot; &amp; &quot;End Date &quot; &amp; TEXT(DAY( End_Date2__c )) &amp; &quot;-&quot;&amp; TEXT(MONTH(End_Date2__c)) &amp;&quot;-&quot;&amp; TEXT(YEAR(End_Date2__c)) , 
 
 IF( ISPICKVAL( Type__c  ,&quot;Membership Evaluation&quot;), &quot; - &quot; &amp; &quot;Start Date &quot; &amp;TEXT(DAY(Start_date__c)) &amp; &quot;-&quot;&amp;  TEXT(MONTH(Start_date__c)) &amp;&quot;-&quot; &amp;  TEXT(YEAR(Start_date__c))  &amp; &quot; - &quot; &amp; &quot;End Date &quot; &amp; TEXT(DAY( End_Date2__c )) &amp; &quot;-&quot;&amp; TEXT(MONTH(End_Date2__c)) &amp;&quot;-&quot;&amp; TEXT(YEAR(End_Date2__c)), 

 IF( ISPICKVAL( Type__c  ,&quot;Team Evaluation&quot;), &quot; - &quot; &amp; &quot;Start Date &quot; &amp;TEXT(DAY(Start_date__c)) &amp; &quot;-&quot;&amp;  TEXT(MONTH(Start_date__c)) &amp;&quot;-&quot; &amp;  TEXT(YEAR(Start_date__c))  &amp; &quot; - &quot; &amp; &quot;End Date &quot; &amp; TEXT(DAY( End_Date2__c )) &amp; &quot;-&quot;&amp; TEXT(MONTH(End_Date2__c)) &amp;&quot;-&quot;&amp; TEXT(YEAR(End_Date2__c)),
	
 IF( ISPICKVAL( Type__c  ,&quot;Preparatory Evaluation&quot;), &quot; - &quot; &amp; &quot;Start Date &quot; &amp;TEXT(DAY(Start_date__c)) &amp; &quot;-&quot;&amp;  TEXT(MONTH(Start_date__c)) &amp;&quot;-&quot; &amp;  TEXT(YEAR(Start_date__c))  &amp; &quot; - &quot; &amp; &quot;End Date &quot; &amp; TEXT(DAY( End_Date2__c )) &amp; &quot;-&quot;&amp; TEXT(MONTH(End_Date2__c)) &amp;&quot;-&quot;&amp; TEXT(YEAR(End_Date2__c)),
 &quot;&quot;))))
 
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Membership</label>
        <referenceTo>Membership__c</referenceTo>
        <relationshipLabel>Billing Contracts</relationshipLabel>
        <relationshipName>Billing_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_contract_lines__c</fullName>
        <label>Number of contract lines</label>
        <summaryForeignKey>Billing_Contract_Line__c.Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Billing Contracts</relationshipLabel>
        <relationshipName>Billing_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <formula>link_CliC2g_Id__r.c2g__PaymentStatus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Billing Contracts (Primary Contact)</relationshipLabel>
        <relationshipName>Billing_Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewable_this_week__c</fullName>
        <formula>IF( Renewal_Invoice_Date__c &lt; TODAY() + 7 &amp;&amp;  Contract_Renewed__c = false , true , false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewable this week?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_End_Date__c</fullName>
        <formula>IF( ISPICKVAL( Billing_period_of_Contract__c , &quot;Yearly&quot;), DATE(YEAR(End_Date2__c  )+ 1, MONTH(End_Date2__c ), DAY(End_Date2__c )), End_Date2__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Failure_Message__c</fullName>
        <label>Renewal Failure Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Invoice_Date__c</fullName>
        <formula>IF( ISPICKVAL( Billing_period_of_Contract__c , &quot;Yearly&quot;), DATE(YEAR(Invoice_Date__c )+ 1, MONTH(Invoice_Date__c), DAY(Invoice_Date__c)), Invoice_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Processed__c</fullName>
        <description>Timestamp the renewal was processed.</description>
        <label>Renewal Processed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Renewal_Start_Date__c</fullName>
        <formula>IF( ISPICKVAL( Billing_period_of_Contract__c , &quot;Yearly&quot;),  DATE(YEAR(Start_date__c )+ 1, MONTH(Start_date__c), DAY(Start_date__c)), Start_date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Status__c</fullName>
        <description>Indicates the renewal status for the Billing Contract when applicable. Together with the Renewal_Processed__c -field, this field is used for filtering and monitoring the renewal process.</description>
        <label>Renewal Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewed_Billing_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewed Billing Contract</label>
        <referenceTo>Billing_Contract__c</referenceTo>
        <relationshipLabel>Billing Contracts</relationshipLabel>
        <relationshipName>Billing_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response_to_customer_request__c</fullName>
        <label>Response to customer request</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Membership cancelled</fullName>
                </value>
                <value>
                    <fullName>Accreditation cancelled</fullName>
                </value>
                <value>
                    <fullName>Fee waived</fullName>
                </value>
                <value>
                    <fullName>Payment delay agreed</fullName>
                </value>
                <value>
                    <fullName>Reduction/increase in student enrolment</fullName>
                </value>
                <value>
                    <fullName>On hold - requested membership withdrawal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Invoice_Created2__c</fullName>
        <formula>IF(!ISBLANK(link_CliC2g_Id__c) || !ISBLANK(Sales_Invoice__c), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Invoice Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Invoice_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OBSOLETE Sales Invoice Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OBSOLETE Sales Invoice</label>
        <referenceTo>c2g__codaInvoice__c</referenceTo>
        <relationshipLabel>Billing Contracts</relationshipLabel>
        <relationshipName>Billing_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule_type__c</fullName>
        <description>Whether the Amount is used for each installment (Multiply By), or Amount is split between installments (Divide By)</description>
        <label>Schedule type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Multiply By</fullName>
                </value>
                <value>
                    <fullName>Divide By</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Invoice_per_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Invoice per Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <description>Start date of the contract</description>
        <inlineHelpText>Start date of the contract</inlineHelpText>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>On hold</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                    <isActive>false</isActive>
                    <label>Draft</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Enrolment__c</fullName>
        <formula>Account__r.Total_Student_Enrolment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Enrolment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubstituteForBillingContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to previous Billing Contract in the chain</description>
        <label>Substitute For Billing Contract</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Billing_Contract__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Billing_Contract__c</referenceTo>
        <relationshipLabel>Billing Contract Substitutes</relationshipLabel>
        <relationshipName>BillingContractSubstitutes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Value__c</fullName>
        <label>Total Value</label>
        <summarizedField>Billing_Contract_Line__c.Sales_price__c</summarizedField>
        <summaryForeignKey>Billing_Contract_Line__c.Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Team Evaluation Visit</fullName>
                </value>
                <value>
                    <fullName>Extra Evaluation Visit</fullName>
                </value>
                <value>
                    <fullName>Annual Membership Fee</fullName>
                </value>
                <value>
                    <fullName>Membership Application Fee</fullName>
                </value>
                <value>
                    <fullName>Annual Accreditation Fee</fullName>
                </value>
                <value>
                    <fullName>Accreditation Application Fee</fullName>
                </value>
                <value>
                    <fullName>Membership Visit Fee</fullName>
                </value>
                <value>
                    <fullName>Career &amp; Recruitment</fullName>
                </value>
                <value>
                    <fullName>Preparatory Evaluation</fullName>
                </value>
                <value>
                    <fullName>Membership Evaluation</fullName>
                </value>
                <value>
                    <fullName>Team Evaluation</fullName>
                </value>
                <value>
                    <fullName>Five Year Evaluation Visit</fullName>
                    <isActive>false</isActive>
                    <label>Five Year Evaluation Visit</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>link_CliC2g_Errors__c</fullName>
        <description>Errors returned by handler while processing message.</description>
        <inlineHelpText>Errors returned by handler while processing message.</inlineHelpText>
        <label>Processing Errors</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>link_CliC2g_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related Foundations messaging target record. This field is automatically generated when enabling return data. Values are automatically populated during message delivery.</description>
        <inlineHelpText>Lookup to the linked record.</inlineHelpText>
        <label>Sales Invoice</label>
        <referenceTo>c2g__codaInvoice__c</referenceTo>
        <relationshipName>BillingContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>link_CliC2g_State__c</fullName>
        <description>Message processing state returned by handler.</description>
        <inlineHelpText>Message processing state returned by handler.</inlineHelpText>
        <label>Processing State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Ok</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Billing Contract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Description__c</columns>
        <columns>Accounting_Currency__c</columns>
        <columns>Company__c</columns>
        <columns>Start_date__c</columns>
        <columns>End_Date2__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Sales_Invoice__c</columns>
        <columns>Status__c</columns>
        <columns>Billing_period_of_Contract__c</columns>
        <columns>Contract_total_value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>7/19/2024 12:00 AM</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Billing_Contracts_No_Invcoice</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Account__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Start_date__c</columns>
        <columns>Total_Value__c</columns>
        <columns>Sales_Invoice__c</columns>
        <columns>Accounting_Currency__c</columns>
        <columns>Company__c</columns>
        <columns>Status__c</columns>
        <columns>Response_to_customer_request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Invoice_Created__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filters>
        <label>Billing Contracts - No Invoice</label>
    </listViews>
    <listViews>
        <fullName>Billing_contracts_from_3_November_2022</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Account__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Start_date__c</columns>
        <columns>Total_Value__c</columns>
        <columns>Sales_Invoice__c</columns>
        <columns>Student_Enrolment__c</columns>
        <columns>Accounting_Currency__c</columns>
        <columns>Company__c</columns>
        <columns>Status__c</columns>
        <columns>Response_to_customer_request__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>11/3/2022 12:00 AM</value>
        </filters>
        <filters>
            <field>Start_date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2022</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Annual Membership Fee</value>
        </filters>
        <label>Billing contracts from 3 November 2022</label>
    </listViews>
    <listViews>
        <fullName>Clicklink_BC_to_SIN</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Description__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Invoice_Created__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Invoice_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Expired,Cancelled,On hold</value>
        </filters>
        <filters>
            <field>Invoice_Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2019</value>
        </filters>
        <label>Clicklink BC to SIN</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Invoiced_Billing_Contracts</fullName>
        <columns>NAME</columns>
        <columns>Sales_Invoice__c</columns>
        <columns>Account__c</columns>
        <columns>Accounting_Currency__c</columns>
        <columns>Company__c</columns>
        <columns>Type__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Start_date__c</columns>
        <columns>Total_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Invoice__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Invoiced Billing Contracts</label>
    </listViews>
    <listViews>
        <fullName>Renewable_BC_HE_July_2023</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Type__c</columns>
        <columns>Renewal_Invoice_Date__c</columns>
        <columns>Renewal_Start_Date__c</columns>
        <columns>Total_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Renewable__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Contract_Renewed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Annual Membership Fee</value>
        </filters>
        <filters>
            <field>Accounting_Currency__c</field>
            <operation>equals</operation>
            <value>USD</value>
        </filters>
        <filters>
            <field>Renewal_Start_Date__c</field>
            <operation>equals</operation>
            <value>7/1/2023</value>
        </filters>
        <label>Renewable BC (HE July 2023)</label>
    </listViews>
    <listViews>
        <fullName>Renewable_BC_HE_July_2024</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 and 7</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Type__c</columns>
        <columns>Renewal_Invoice_Date__c</columns>
        <columns>Renewal_Start_Date__c</columns>
        <columns>Total_Value__c</columns>
        <columns>Sales_Invoice__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Renewable__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Contract_Renewed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Annual Membership Fee</value>
        </filters>
        <filters>
            <field>Accounting_Currency__c</field>
            <operation>equals</operation>
            <value>USD</value>
        </filters>
        <filters>
            <field>Renewal_Start_Date__c</field>
            <operation>equals</operation>
            <value>7/1/2024</value>
        </filters>
        <filters>
            <field>Sales_Invoice_Created__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Renewable BC (HE July 2024)</label>
    </listViews>
    <listViews>
        <fullName>Renewable_BC_HE_July_2025</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 and 7</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Type__c</columns>
        <columns>Renewal_Invoice_Date__c</columns>
        <columns>Renewal_Start_Date__c</columns>
        <columns>Total_Value__c</columns>
        <columns>Sales_Invoice__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Renewable__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Contract_Renewed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Annual Membership Fee</value>
        </filters>
        <filters>
            <field>Accounting_Currency__c</field>
            <operation>equals</operation>
            <value>USD</value>
        </filters>
        <filters>
            <field>Renewal_Start_Date__c</field>
            <operation>equals</operation>
            <value>7/1/2025</value>
        </filters>
        <filters>
            <field>Sales_Invoice_Created__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Renewable BC (HE July 2025_No inv)</label>
    </listViews>
    <listViews>
        <fullName>Renewable_BC_HE_Rolling_Membership</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Type__c</columns>
        <columns>Renewal_Invoice_Date__c</columns>
        <columns>Renewal_Start_Date__c</columns>
        <columns>Renewal_End_Date__c</columns>
        <columns>Total_Value__c</columns>
        <columns>Contract_Renewed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Renewable__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Contract_Renewed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Annual Membership Fee</value>
        </filters>
        <filters>
            <field>Accounting_Currency__c</field>
            <operation>equals</operation>
            <value>USD</value>
        </filters>
        <filters>
            <field>Renewal_Start_Date__c</field>
            <operation>notEqual</operation>
            <value>7/1/2022</value>
        </filters>
        <label>Renewable BC (HE Rolling Membership)</label>
    </listViews>
    <listViews>
        <fullName>Renewable_BC_SCH_Accred_Jul_2025_No_Inv</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 and 7</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Type__c</columns>
        <columns>Renewal_Invoice_Date__c</columns>
        <columns>Renewal_Start_Date__c</columns>
        <columns>Total_Value__c</columns>
        <columns>Sales_Invoice__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Renewable__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Contract_Renewed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Annual Accreditation Fee</value>
        </filters>
        <filters>
            <field>Accounting_Currency__c</field>
            <operation>equals</operation>
            <value>EUR</value>
        </filters>
        <filters>
            <field>Renewal_Start_Date__c</field>
            <operation>equals</operation>
            <value>7/1/2025</value>
        </filters>
        <filters>
            <field>Sales_Invoice_Created__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Renewable BC (SCH Accred Jul 2025_No Inv</label>
    </listViews>
</CustomObject>